--- a/InfoState.ini
+++ b/InfoState.ini
@@ -1,4 +1,4 @@
-﻿modVersion = 0.09c
+﻿modVersion = 0.09d
 modLink = https://drive.google.com/file/d/1GwFfPTPgangZCdmqzkEArUU7g-mcGayO/view?usp=drive_link
 modName = WOD
 launcherVersion = 0.01
