--- a/IconsInfo.ini
+++ b/IconsInfo.ini
@@ -4,9 +4,16 @@ Soviet = Soviet_Icon
 Soviets = Soviet_Icon
 СССР = Soviet_Icon
 
+Спецназ = SUAntiInfantryInfantryTech2_Button
+Десантник ПВО = SUAntiVehicleInfantryTech2_Button
+
 Allied = Allied_Icon
 Allies = Allied_Icon
 Альянс = Allied_Icon
+
+"Гермес" = AUAntiGroundAircraftTech2_Button
+Гермес = AUAntiGroundAircraftTech2_Button
+Hermes AGH = AUAntiGroundAircraftTech2_Button
 
 Empire = Empire_Icon
 Империя = Empire_Icon
