--- a/InfoState.ini
+++ b/InfoState.ini
@@ -1,5 +1,5 @@
-﻿modVersion = 0.09k
 modName = WOD
-launcherVersion = 0.01
+modVersionTest = 0.09k
+modVersion = 0.09
 
-modLink = https://drive.google.com/file/d/1GwFfPTPgangZCdmqzkEArUU7g-mcGayO/view?usp=drive_link
+launcherVersion = 0.01
