--- a/InfoDownloadLinks.ini
+++ b/InfoDownloadLinks.ini
@@ -1,5 +1,5 @@
 modLinkTestRus = https://drive.google.com/file/d/1GwFfPTPgangZCdmqzkEArUU7g-mcGayO/view?usp=drive_link
-modLinkTestEng =
+modLinkTestEng = https://drive.google.com/file/d/1Mtt54VMt4U6jirypbR0u_I1BxIp4ErQQ/view?usp=sharing
 
-modLinkRus = https://drive.google.com/file/d/1GwFfPTPgangZCdmqzkEArUU7g-mcGayO/view?usp=drive_link
-modLinkEng = 
+modLinkRus = https://drive.google.com/file/d/1fVkH83T4uSn0RRCtSXF2RyM_9fybxhej/view?usp=sharing
+modLinkEng = https://drive.google.com/file/d/11JXlW92yqwt5b0uRdXURxbFS9D3J-cFR/view?usp=sharing
